Improve documentation on memory requirements for testing